eject react app, add sass-resources-loader to load sass variables in every .scss file, add webpack '@' alias for root project folder, and update imports accordingly

--- a/spotlight-react/src/_variables.scss
+++ b/spotlight-react/src/_variables.scss
@@ -7,5 +7,9 @@ $danger: #ff0000;
 $dark: #121212;
 $text: #FAFAFA;
 
-$background: #262626;
+$dark-gray: $dark;
+$gray: #181818;
+$light-gray: #282828;
+
+$background: $gray;
 $background-dark: $dark;
