--- a/spotlight-react/src/pages/Profile/profile-styles.scss
+++ b/spotlight-react/src/pages/Profile/profile-styles.scss
@@ -4,7 +4,7 @@
         height: 200px;
         width: 200px;
         border-radius: 50%;
-        border: 2px solid #3273dc;
+        border: 2px solid $primary;
         overflow: hidden;
         .profile__picture {
             height: 100%;
