--- a/spotlight-react/src/_variables.scss
+++ b/spotlight-react/src/_variables.scss
@@ -6,6 +6,7 @@ $warning: #ffd900;
 $danger: #ff0000;
 $dark: #121212;
 $text: #FAFAFA;
+$dark-text: #A0A0A0;
 
 $dark-gray: $dark;
 $gray: #181818;
@@ -13,3 +14,6 @@ $light-gray: #282828;
 
 $background: $gray;
 $background-dark: $dark;
+
+$info-height: 320px;
+$nav-height: 65px;
