--- a/spotlight-react/src/index.scss
+++ b/spotlight-react/src/index.scss
@@ -1,19 +1,78 @@
 @import 'bulma/bulma.sass';
-
-body {
-  background-color: #fafafa;
-  min-height: 100vh;
-  width: 100vw;
+//todo: clean up all the height and width stuff. see what's actually needed
+html { 
   overflow: hidden;
-
-  #app {
-    overflow-y: scroll;
+  background-color: $dark-gray;
+}
+body {
+  background-color: $dark-gray;
+  height: 100vh;
+  max-height: 100vh;
+  width: 100vw;
+  max-width: 100vw;
+  overflow: hidden;
+  #root { 
+    overflow: hidden;
+    height: 100%;
+    max-height: 100%;
+    width: 100%;
+    max-width: 100%;
+    .particles { 
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 0;
+      height: 100%;
+      width: 100%;
+    }
 
     .button {
       border-radius: 25px;
       &:hover, &:active, &:focus {
         color: white;
         a { color: white }
+      }
+    }
+
+    .link {
+      color: $text;
+      display: inline-block;
+      position: relative;
+      cursor: pointer;
+      &::after {
+        content: '';
+        display: block;
+        width: 1rem;
+        height: 1px;
+        background-color: $primary;
+        transition: 150ms ease;
+      }
+      &:hover {
+        color: darken($text, 15%);
+        &::after { width: 100% }
+      }
+    }
+  }
+  #layout {
+    overflow: hidden;
+    height: 100%;
+    max-height: 100%;
+    width: 100%;
+    max-width: 100%;
+    position: relative;
+    z-index: 10;
+    nav { height: $nav-height }
+    .columns {
+      height: 100%;
+      max-height: 100%;
+      width: 100%;
+      max-width: 100%;
+      #content {
+        height: 100%;
+        overflow: scroll;
+        position: relative;
+        clip-path: inset($nav-height 0 0 0);
+        padding-top: 65px !important;
       }
     }
   }
