--- a/spotlight-react/src/pages/Profile/profile-styles.scss
+++ b/spotlight-react/src/pages/Profile/profile-styles.scss
@@ -1,37 +1,35 @@
 .profile {
-
-    .profile__picture-container {
-        height: 200px;
-        width: 200px;
-        border-radius: 50%;
-        border: 2px solid $primary;
-        overflow: hidden;
-        .profile__picture {
-            height: 100%;
-            width: 100%
-        }
-    }
-
-    .profile__display-name {
-        display: inline-block;
-        font-weight: 700;
-    }
+    overflow: auto;
 
     .profile__playlists {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
-
-        li {
-            display: inline-block;
-            margin: 30px;
-            flex: 0 0 auto;
-            div { display: inline-block }
+        background: linear-gradient($light-gray, $gray);
+        background-attachment: fixed;
+        padding: 40px;
+        margin-top: $info-height;
+        position: relative;
+        z-index: 10;
+        h3 {
+            font-weight: 700;
+            font-size: 2rem;
+            border-left: 5px solid $primary;
+            padding-left: 20px;
+            margin-bottom: 20px;
+        }
+        .playlists__items {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+            a { cursor: default }
+            .playlists__item {
+                margin: 30px;
+                flex: 0 0 auto;
+                cursor: default;
+            }
         }
     }
 }
