reduce text size in playlist table

--- a/spotlight-react/src/pages/Playlist/playlist-styles.scss
+++ b/spotlight-react/src/pages/Playlist/playlist-styles.scss
@@ -17,6 +17,7 @@
             tr td,th { 
                 color: $text;
                 padding: 10px;
+                font-size: .85rem;
                 white-space: nowrap;
                 overflow: hidden;
                 border-color: $dark-text;
